force-app/main/default/objects/VOB__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>The date when the insurance coverage ends.</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>