force-app/main/default/objects/VOB__c/fields/Effective_To_PreAuth__c.field-meta.xml
<CustomField>
    <fullName>Effective_To_PreAuth__c</fullName>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>