force-app/main/default/objects/VOB__c/fields/Employment__c.field-meta.xml
<CustomField>
    <fullName>Employment__c</fullName>
    <label>Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>