force-app/main/default/objects/VOB__c/fields/Estimated_duration_future_treatment_AA__c.field-meta.xml
<CustomField>
    <fullName>Estimated_duration_future_treatment_AA__c</fullName>
    <label>Estimated duration of future treatment:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>