force-app/main/default/objects/VOB__c/fields/Exclusions_Restrictions_on_policy__c.field-meta.xml
<CustomField>
    <fullName>Exclusions_Restrictions_on_policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusions / Restrictions on policy?</label>
    <type>Checkbox</type>
</CustomField>