force-app/main/default/objects/VOB__c/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <description>The date when the insurance coverage expires.</description>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>