force-app/main/default/objects/VOB__c/fields/Facility_Outpatient_Services__c.field-meta.xml
<CustomField>
    <fullName>Facility_Outpatient_Services__c</fullName>
    <label>Facility Outpatient svcs (90853 / 90832)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>