force-app/main/default/objects/VOB__c/fields/Federal_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID_Number__c</fullName>
    <label>Federal Tax ID Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>EIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>