force-app/main/default/objects/VOB__c/fields/Freestanding_Facicility_PHP_IOP_OP__c.field-meta.xml
<CustomField>
    <fullName>Freestanding_Facicility_PHP_IOP_OP__c</fullName>
    <inlineHelpText>Is a Freestanding facility covered for PHP, IOP and OP?</inlineHelpText>
    <label>Freestanding covered (PHP, IOP and OP)?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>