force-app/main/default/objects/VOB__c/fields/Freestanding_Facicility_Resi_SADetox__c.field-meta.xml
<CustomField>
    <fullName>Freestanding_Facicility_Resi_SADetox__c</fullName>
    <inlineHelpText>Is a Freestanding facility covered for Res and Sub Acute Detox?</inlineHelpText>
    <label>Freestanding covered (Res and SA Detox)?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>