force-app/main/default/objects/VOB__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>The gender of the individual insured under the policy.</description>
    <label>Insured Sex</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Female</label>
            </value>
            <value>
                <fullName>UN</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Male</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>