force-app/main/default/objects/VOB__c/fields/Generate_Claim_on__c.field-meta.xml
<CustomField>
    <fullName>Generate_Claim_on__c</fullName>
    <description>Used to check which type of price is to be configured while claim generation.</description>
    <label>Generate Claim on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual Price</fullName>
                <default>true</default>
                <label>Actual Price</label>
            </value>
            <value>
                <fullName>Contracted Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>