force-app/main/default/objects/VOB__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Group number associate with the insurance.</description>
    <label>Group#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>