force-app/main/default/objects/VOB__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Insurance Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>