force-app/main/default/objects/VOB__c/fields/GroupNumber__c.field-meta.xml
<CustomField>
    <fullName>GroupNumber__c</fullName>
    <label>Group#</label>
    <length>250</length>
    <type>Text</type>
</CustomField>