force-app/main/default/objects/VOB__c/fields/H0015_IOP__c.field-meta.xml
<CustomField>
    <fullName>H0015_IOP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>H0015(IOP) Covered?</label>
    <type>Checkbox</type>
</CustomField>