force-app/main/default/objects/VOB__c/fields/H0035_PHP__c.field-meta.xml
<CustomField>
    <fullName>H0035_PHP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>H0035(PHP) Covered?</label>
    <type>Checkbox</type>
</CustomField>