force-app/main/default/objects/VOB__c/fields/How_much__c.field-meta.xml
<CustomField>
    <fullName>How_much__c</fullName>
    <label>How much?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>