force-app/main/default/objects/VOB__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>Unique identifier for the insurance record.</description>
    <label>ID#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>