force-app/main/default/objects/VOB__c/fields/If_disability_date_to_return__c.field-meta.xml
<CustomField>
    <fullName>If_disability_date_to_return__c</fullName>
    <description>Date the patient is expected to return if disabled.</description>
    <inlineHelpText>If still disables, patient should be able to return to work on?</inlineHelpText>
    <label>If disability, date to return :</label>
    <type>Date</type>
</CustomField>