force-app/main/default/objects/VOB__c/fields/If_Yes_describe_AA__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_describe_AA__c</fullName>
    <label>If Yes, describe:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>