force-app/main/default/objects/VOB__c/fields/If_yes_state_recommendation_AA__c.field-meta.xml
<CustomField>
    <fullName>If_yes_state_recommendation_AA__c</fullName>
    <label>If yes, please state your recommendation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>