force-app/main/default/objects/VOB__c/fields/If_yes_state_when_AA__c.field-meta.xml
<CustomField>
    <fullName>If_yes_state_when_AA__c</fullName>
    <description>Additional information about the disability status.</description>
    <label>If yes to above, state when</label>
    <type>Date</type>
</CustomField>