force-app/main/default/objects/VOB__c/fields/In_Net_Out_of_Pkt_Total__c.field-meta.xml
<CustomField>
    <fullName>In_Net_Out_of_Pkt_Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>