force-app/main/default/objects/VOB__c/fields/INN_Network_INN__c.field-meta.xml
<CustomField>
    <fullName>INN_Network_INN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the insurance provider is part of the Inn Network.</description>
    <label>INN Network(INN)</label>
    <type>Checkbox</type>
</CustomField>