force-app/main/default/objects/VOB__c/fields/Ins_Comp__c.field-meta.xml
<CustomField>
    <fullName>Ins_Comp__c</fullName>
    <description>Insurance company associate with the insurance record.</description>
    <label>Ins Comp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>