force-app/main/default/objects/VOB__c/fields/Ins_Comp_Other__c.field-meta.xml
<CustomField>
    <fullName>Ins_Comp_Other__c</fullName>
    <label>Ins Comp(Other)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>