force-app/main/default/objects/VOB__c/fields/InsPhone__c.field-meta.xml
<CustomField>
    <fullName>InsPhone__c</fullName>
    <description>The phone number associate with the insured individual.</description>
    <label>Insured Phone</label>
    <type>Phone</type>
</CustomField>