force-app/main/default/objects/VOB__c/fields/Insuranc__c.field-meta.xml
<CustomField>
    <fullName>Insuranc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance+</label>
    <type>Checkbox</type>
</CustomField>