force-app/main/default/objects/VOB__c/fields/Insurance_Carrier_Code_WC__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier_Code_WC__c</fullName>
    <label>Insurance Carrier Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>