force-app/main/default/objects/VOB__c/fields/Insurance_CaseNo_WC__c.field-meta.xml
<CustomField>
    <fullName>Insurance_CaseNo_WC__c</fullName>
    <label>Insurance Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>