force-app/main/default/objects/VOB__c/fields/Insurance_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Phone__c</fullName>
    <description>The phone number associate with the primary insurance provider.</description>
    <label>Primary Insurance Phone Number</label>
    <type>Phone</type>
</CustomField>