force-app/main/default/objects/VOB__c/fields/Insurance_Counts__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Counts__c</fullName>
    <description>Represents the whether the insurance is Primary, Secondary, Tertiary.</description>
    <label>Insurance Counts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>