force-app/main/default/objects/VOB__c/fields/Insurance_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group_Number__c</fullName>
    <description>Represents the Insurance Group Number of Insured.</description>
    <label>Primary Insurance Group Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>