force-app/main/default/objects/VOB__c/fields/Insurance_Group_Number_Sec__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group_Number_Sec__c</fullName>
    <label>Secondary Insurance Group Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>