force-app/main/default/objects/VOB__c/fields/Insurance_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_ID_Number__c</fullName>
    <description>Represents the Insurance ID Number of Insured.</description>
    <label>Insurance ID Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>