force-app/main/default/objects/VOB__c/fields/Insurance_Photo_Back__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Photo_Back__c</fullName>
    <description>Represents the Back side photo of Insured.</description>
    <label>Insurance Photo Back</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>