force-app/main/default/objects/VOB__c/fields/Insurance_Photo_Front__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Photo_Front__c</fullName>
    <description>Represents the Front side photo of Insured.</description>
    <label>Insurance Photo Front</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>