force-app/main/default/objects/VOB__c/fields/Insurance_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_ID__c</fullName>
    <label>Primary Insurance Policy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>