force-app/main/default/objects/VOB__c/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Insurance Provider with Insurance Provider.</description>
    <label>Insurance Provider</label>
    <referenceTo>Insurance_Provider__c</referenceTo>
    <relationshipLabel>Insurance</relationshipLabel>
    <relationshipName>VOBS</relationshipName>
    <type>Lookup</type>
</CustomField>