force-app/main/default/objects/VOB__c/fields/Insurance_Providers__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Providers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the Primary Insurance Provider with payor.</description>
    <label>Primary Insurance Provider</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Insurance (Primary Insurance Provider)</relationshipLabel>
    <relationshipName>VOBS</relationshipName>
    <type>Lookup</type>
</CustomField>