force-app/main/default/objects/VOB__c/fields/Insurance_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Responsibility__c</fullName>
    <description>The charges that will be borne by the insurance provider.</description>
    <label>Insurance Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>