force-app/main/default/objects/VOB__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <description>The type of insurance coverage, such as Medicare, Medicaid, Tricare, CHAMPVA, Group Health Plan, etc..</description>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MA</fullName>
                <label>Medicare Part A</label>
            </value>
            <value>
                <fullName>MB</fullName>
                <label>Medicare Part B</label>
            </value>
            <value>
                <fullName>WC</fullName>
                <label>Workers&apos; Compensation Health Claim</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Other Non-Federal Programs</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Preferred Provider Organization (PPO)</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Point of Service (POS)</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Exclusive Provider Organization (EPO)</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Indemnity Insurance</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Health Maintenance Organization (HMO) Medicare Risk</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Dental Maintenance Organization</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Automobile Medical</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>Blue Cross/Blue Shield</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Champus</label>
            </value>
            <value>
                <fullName>CI</fullName>
                <label>Commercial Insurance Co.</label>
            </value>
            <value>
                <fullName>DS</fullName>
                <label>Disability</label>
            </value>
            <value>
                <fullName>FI</fullName>
                <label>Federal Employees Program</label>
            </value>
            <value>
                <fullName>HM</fullName>
                <label>Health Maintenance Organization</label>
            </value>
            <value>
                <fullName>LM</fullName>
                <label>Liability Medical</label>
            </value>
            <value>
                <fullName>MC</fullName>
                <label>Medicaid</label>
            </value>
            <value>
                <fullName>TV</fullName>
                <label>Title V</label>
            </value>
            <value>
                <fullName>VA</fullName>
                <label>Veteran Administration Plan</label>
            </value>
            <value>
                <fullName>ZZ</fullName>
                <label>Mutually Defined</label>
            </value>
            <value>
                <fullName>OF</fullName>
                <label>Other Federal Program</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>