force-app/main/default/objects/VOB__c/fields/Insurance_Type_Sec__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_Sec__c</fullName>
    <description>Code specifying the type of secondary insurance, such as Tricare, Medicare Secondary Black Lung, 	Medicare Secondary Worker&apos;s Compensation, etc.</description>
    <inlineHelpText>Note: Required for Medicare Plans Only</inlineHelpText>
    <label>Secondary insurance type code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tricare</fullName>
            </value>
            <value>
                <fullName>Medicare Secondary Working Aged Beneficiary or Spouse with Employer Group Health Plan Medicare Secondary End-Stage Renal Disease Beneficiary in the Mandated Coordination period</fullName>
            </value>
            <value>
                <fullName>Medicare Secondary No-fault Insurance including Auto is Primary</fullName>
            </value>
            <value>
                <fullName>Medicare Secondary Worker&apos;s Compensation</fullName>
            </value>
            <value>
                <fullName>Medicare Secondary Public Health Service (PHS) or Other Federal Agency</fullName>
            </value>
            <value>
                <fullName>Medicare Secondary Black Lung</fullName>
            </value>
            <value>
                <fullName>Medicare Secondary Veteran&apos;s Administration</fullName>
            </value>
            <value>
                <fullName>Medicare Secondary Disabled Beneficiary Under Age 65 with Larger Group Health Plan (LGHP)</fullName>
            </value>
            <value>
                <fullName>Medicare Secondary Other Liability Insurance is Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>