force-app/main/default/objects/VOB__c/fields/Insurance_WCB_Num__c.field-meta.xml
<CustomField>
    <fullName>Insurance_WCB_Num__c</fullName>
    <label>Insurance W.C.B #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>