force-app/main/default/objects/VOB__c/fields/Insurance_WCB_Rating_Code__c.field-meta.xml
<CustomField>
    <fullName>Insurance_WCB_Rating_Code__c</fullName>
    <label>Insurance W.C.B Rating Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>