force-app/main/default/objects/VOB__c/fields/InsuranceId__c.field-meta.xml
<CustomField>
    <fullName>InsuranceId__c</fullName>
    <label>Ins. ID#</label>
    <length>250</length>
    <type>Text</type>
</CustomField>