force-app/main/default/objects/VOB__c/fields/Insured_Address__c.field-meta.xml
<CustomField>
    <fullName>Insured_Address__c</fullName>
    <description>Represents the Address of Insured.</description>
    <label>Insured Address</label>
    <type>TextArea</type>
</CustomField>