force-app/main/default/objects/VOB__c/fields/Insured_City__c.field-meta.xml
<CustomField>
    <fullName>Insured_City__c</fullName>
    <description>Denotes the City of Insured.</description>
    <label>Insured City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>