force-app/main/default/objects/VOB__c/fields/Insured_Country__c.field-meta.xml
<CustomField>
    <fullName>Insured_Country__c</fullName>
    <description>Denotes the Country of Insured.</description>
    <label>Insured Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>