force-app/main/default/objects/VOB__c/fields/Insured_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_First_Name__c</fullName>
    <description>Denotes the First Name of Insured.</description>
    <label>Insured First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>