force-app/main/default/objects/VOB__c/fields/Insured_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Insured_Id_Number__c</fullName>
    <description>Denotes the ID Number of Insured.</description>
    <label>Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>