force-app/main/default/objects/VOB__c/fields/Insured_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Middle_Name__c</fullName>
    <description>Denotes the Middle Name of Insured.</description>
    <label>Insured Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>