force-app/main/default/objects/VOB__c/fields/Insured_Policy_Group_FECA_Number__c.field-meta.xml
<CustomField>
    <fullName>Insured_Policy_Group_FECA_Number__c</fullName>
    <description>Denotes the Group or FECA number associate with the insured policy.</description>
    <label>Insured Policy Group / FECA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>