force-app/main/default/objects/VOB__c/fields/Insured_SSN__c.field-meta.xml
<CustomField>
    <fullName>Insured_SSN__c</fullName>
    <description>Denotes the SSN Number of Insured.</description>
    <label>Insured SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>