force-app/main/default/objects/VOB__c/fields/Insured_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Insured_Zipcode__c</fullName>
    <description>Denotes the Zip code of Insured.</description>
    <label>Insured Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>