force-app/main/default/objects/VOB__c/fields/Intake_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Intake_Assessment__c</fullName>
    <label>Intake Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H0001</fullName>
            </value>
            <value>
                <fullName>96150</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>