force-app/main/default/objects/VOB__c/fields/IOP__c.field-meta.xml
<CustomField>
    <fullName>IOP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S9480(IOP) Covered?</label>
    <type>Checkbox</type>
</CustomField>