force-app/main/default/objects/VOB__c/fields/IOP_cal__c.field-meta.xml
<CustomField>
    <fullName>IOP_cal__c</fullName>
    <label>IOP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>