force-app/main/default/objects/VOB__c/fields/IOP_Inpatient_Or_Outpatient__c.field-meta.xml
<CustomField>
    <fullName>IOP_Inpatient_Or_Outpatient__c</fullName>
    <inlineHelpText>Is IOP (H0015 / S9480) considered In-Patient or Out-Patient?</inlineHelpText>
    <label>IOP is In-Patient or Out-Patient?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>