force-app/main/default/objects/VOB__c/fields/IPR__c.field-meta.xml
<CustomField>
    <fullName>IPR__c</fullName>
    <label>IPR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>