force-app/main/default/objects/VOB__c/fields/Is_a_Free_Standing_Facility_okay__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Free_Standing_Facility_okay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Free standing Facility okay?</label>
    <type>Checkbox</type>
</CustomField>