force-app/main/default/objects/VOB__c/fields/Is_CARF_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_CARF_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CARF Required?</label>
    <type>Checkbox</type>
</CustomField>