force-app/main/default/objects/VOB__c/fields/Is_JCAHO_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_JCAHO_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is JCAHO Required?</label>
    <type>Checkbox</type>
</CustomField>