force-app/main/default/objects/VOB__c/fields/Is_the_DED_Met__c.field-meta.xml
<CustomField>
    <fullName>Is_the_DED_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the DED Met?</label>
    <type>Checkbox</type>
</CustomField>