force-app/main/default/objects/VOB__c/fields/Is_the_OOP_met__c.field-meta.xml
<CustomField>
    <fullName>Is_the_OOP_met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the OOP Met?</label>
    <type>Checkbox</type>
</CustomField>