force-app/main/default/objects/VOB__c/fields/Is_there_another_Health_Benefit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_there_another_Health_Benefit_Plan__c</fullName>
    <description>Indicates if there is another health benefit plan.</description>
    <label>Is there another Health Benefit Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>