force-app/main/default/objects/VOB__c/fields/Is_there_COB_on_file__c.field-meta.xml
<CustomField>
    <fullName>Is_there_COB_on_file__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there COB on file?</label>
    <type>Checkbox</type>
</CustomField>