force-app/main/default/objects/VOB__c/fields/Is_This_A_Cobra_Policy__c.field-meta.xml
<CustomField>
    <fullName>Is_This_A_Cobra_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is This A Cobra Policy?</label>
    <type>Checkbox</type>
</CustomField>