force-app/main/default/objects/VOB__c/fields/Is_This_a_Student_Policy__c.field-meta.xml
<CustomField>
    <fullName>Is_This_a_Student_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a student policy?</label>
    <type>Checkbox</type>
</CustomField>