force-app/main/default/objects/VOB__c/fields/Is_this_Covered__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this Covered</label>
    <type>Checkbox</type>
</CustomField>