force-app/main/default/objects/VOB__c/fields/Is_this_Covered_re__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Covered_re__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Auth?</label>
    <type>Checkbox</type>
</CustomField>