force-app/main/default/objects/VOB__c/fields/JSON_Dump__c.field-meta.xml
<CustomField>
    <fullName>JSON_Dump__c</fullName>
    <description>Represents the Insurance JSON Response received from ClaimMD.</description>
    <label>JSON Dump</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>