force-app/main/default/objects/VOB__c/fields/Lab_Codes_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Lab_Codes_Coverage__c</fullName>
    <label>Lab Codes Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>80305</fullName>
            </value>
            <value>
                <fullName>80307</fullName>
            </value>
            <value>
                <fullName>G0481</fullName>
            </value>
            <value>
                <fullName>G0482</fullName>
            </value>
            <value>
                <fullName>G0483</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>