force-app/main/default/objects/VOB__c/fields/Lab_Payer_Id__c.field-meta.xml
<CustomField>
    <fullName>Lab_Payer_Id__c</fullName>
    <label>What is the lab payer ID?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>