force-app/main/default/objects/VOB__c/fields/LabCodes__c.field-meta.xml
<CustomField>
    <fullName>LabCodes__c</fullName>
    <label>Lab Codes: 80305/G0481</label>
    <length>250</length>
    <type>Text</type>
</CustomField>