force-app/main/default/objects/VOB__c/fields/LabPayerSameAsSubstanceAbusePayer__c.field-meta.xml
<CustomField>
    <fullName>LabPayerSameAsSubstanceAbusePayer__c</fullName>
    <label>Is that the same as the Substance Abuse?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>